src/objects/Country_State_Dependency__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds state/country dependency (if any)</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Country State Dependency</label>
</CustomObject>